--- a/style.css
+++ b/style.css
@@ -6,5 +6,6 @@ h3{
     color: brown;
 }
 h4{
-    background-color: aquamarine;
+    background-color: rgb(136, 127, 255);
+    color: lightsteelblue;
 }
